# ai-coding-demo

./: .env.example  .gitignore  .mcp.json  DEVCONTAINER_SETUP.md  README.md  pyproject.toml  setup.bat  setup.sh
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  postStartCommand.sh
.github/: copilot-instructions.md
demosite/: asgi.py  settings.py  urls.py  wsgi.py
mcp/example_server/: electric_vehicle_data_server.py
todo/: admin.py  models.py  urls.py  views.py
todo/migrations/: 0001_initial.py
todo/templates/todo/: todo_list.html
